--- a/packages/canal/charts/templates/config.yaml
+++ b/packages/canal/charts/templates/config.yaml
@@ -8,7 +8,7 @@ metadata:
   namespace: kube-system
 data:
   # Typha is disabled.
-  typha_service_name: "none"
+  typha_service_name: {{ .Values.calico.typhaServiceName | quote }}
   # The interface used by canal for host <-> host communication.
   # If left blank, then the interface is chosen using the node's
   # default route.
@@ -16,10 +16,10 @@ data:
 
   # Whether or not to masquerade traffic to destinations not within
   # the pod network.
-  masquerade: "true"
+  masquerade: {{ .Values.calico.masquerade | quote }}
 
   # Configure the MTU to use
-  veth_mtu: "1450"
+  veth_mtu: {{ .Values.calico.vethuMTU | quote }}
 
   # The CNI network configuration to install on each node.  The special
   # values in this config will be automatically populated.
