--- a/packages/canal/charts/values.yaml
+++ b/packages/canal/charts/values.yaml
@@ -50,3 +50,12 @@ calico:
   felixLogSeverityScreen: info
   # Enable felix healthcheck.
   felixHealthEnabled: true
+  # Whether or not to masquerade traffic to destinations not within
+  # the pod network.
+  masquerade: true
+  # Set Felix endpoint to host default action to ACCEPT.
+  felixDefaultEndpointToHostAction: ACCEPT
+  # Configure the MTU to use.
+  vethuMTU: 1450
+  # Typha is disabled.
+  typhaServiceName: none
