--- a/packages/metrics-server/package.yaml
+++ b/packages/metrics-server/package.yaml
@@ -1,5 +1,2 @@
-url: https://github.com/helm/charts.git
-subdirectory: stable/metrics-server
-type: git
-commit: 61aca68bd482406a3c34e89732a86f24794d67b1
+url: https://kubernetes-charts.storage.googleapis.com/metrics-server-2.11.1.tgz
 packageVersion: 00
