--- a/packages/coredns/charts/templates/configmap.yaml
+++ b/packages/coredns/charts/templates/configmap.yaml
@@ -19,7 +19,7 @@ data:
     {{- if .port }}:{{ .port }} {{ end -}}
     {
       {{- range .plugins }}
-        {{ .name }}{{ if .parameters }} {{ (lookup "v1" "ConfigMap" "kube-system" "cluster-dns").data.clusterDomain }} {{ .parameters }}{{ end }}{{ if .configBlock }} {
+        {{ .name }} {{ if .parameters }} {{if eq .name "kubernetes" }} {{ (lookup "v1" "ConfigMap" "kube-system" "cluster-dns").data.clusterDomain }} {{ end }} {{.parameters}}{{ end }}{{ if .configBlock }} {
 {{ .configBlock | indent 12 }}
         }{{ end }}
       {{- end }}
