change canal images to ranchertest and podcidr

--- a/packages/canal/charts/values.yaml
+++ b/packages/canal/charts/values.yaml
@@ -2,11 +2,11 @@
 
 # The IPv4 cidr pool to create on startup if none exists. Pod IPs will be
 # chosen from this range.
-podCidr: "10.244.0.0/16"
+podCidr: "10.42.0.0/16"
 
 flannel:
   # kube-flannel image
-  image: quay.io/coreos/flannel
+  image: ranchertest/flannel
   # kube-flannel tag
   imageTag: v0.11.0
   # The interface used by canal for host <-> host communication.
@@ -23,11 +23,11 @@ flannel:
           
 calico:
   # CNI installation image.
-  cniImage: calico/cni
+  cniImage: ranchertest/calico
   # Canal node image.
-  nodeImage: calico/node
+  nodeImage: ranchertest/calico
   # Flexvol Image.
-  flexvolImage: calico/pod2daemon-flexvol
+  flexvolImage: ranchertest/calico
   # Image tag used for all related canal images.
   imageTag: v3.13.3
   # Datastore type for canal. It can be either kuberentes or etcd.
