--- a/packages/kube-proxy/charts/templates/daemonset.yaml
+++ b/packages/kube-proxy/charts/templates/daemonset.yaml
@@ -25,7 +25,7 @@ spec:
             fieldRef:
               apiVersion: v1
               fieldPath: spec.nodeName
-        image: {{ .Values.image }}
+          image: {{ .Values.image }}:{{ .Values.imageTag }}
         imagePullPolicy: IfNotPresent
         name: kube-proxy
         securityContext:
