--- a/packages/kube-proxy/charts/templates/daemonset.yaml
+++ b/packages/kube-proxy/charts/templates/daemonset.yaml
@@ -33,6 +33,9 @@ spec:
         volumeMounts:
         - mountPath: /var/lib/kube-proxy
           name: kube-proxy
+        - mountPath: /var/lib/rancher/rke2/agent
+          name: rke2config
+          readOnly: true
         - mountPath: /run/xtables.lock
           name: xtables-lock
         - mountPath: /lib/modules
@@ -54,6 +57,10 @@ spec:
         operator: Exists
       - operator: Exists
       volumes:
+      - hostPath:
+          path: /var/lib/rancher/rke2/agent
+          type: ""
+        name: rke2config
       - configMap:
           name: kube-proxy
         name: kube-proxy
