--- a/packages/rio/charts/templates/envoyfilter.yaml
+++ b/packages/rio/charts/templates/envoyfilter.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: EnvoyFilter
 metadata:
   name: xff-trust-hops
-  namespace: istio-system
+  namespace: {{ .Release.Namespace }}
 spec:
   workloadSelector:
     labels:
