--- a/packages/rio/charts/Chart.yaml
+++ b/packages/rio/charts/Chart.yaml
@@ -4,3 +4,7 @@ version: 0.1.0
 appVersion: 0.8.0-rc1
 description: The application deployment engine for Kubernetes
 home: https://rio.io
+annotations:
+  catalog.rancher.io/certified: rancher
+  catalog.rancher.io/namespace: rio-system
+  catalog.rancher.io/release-name: rio
