fixed labels for cluster flow resources

--- a/packages/rancher-logging/overlay/templates/outputs/elasticsearch/secret.yaml
+++ b/packages/rancher-logging/overlay/templates/outputs/elasticsearch/secret.yaml
@@ -4,7 +4,7 @@ kind: Secret
 metadata:
   name: {{ .Release.Name }}-elasticsearch
   labels:
-{{ include "rancher-logging.labels" . | indent 4 }}
+{{ include "logging-operator.labels" . | indent 4 }}
 type: Opaque
 data:
   password: {{ .Values.elasticsearch.password | b64enc | quote }}
