--- a/packages/rancher-logging/overlay/templates/flow.yaml
+++ b/packages/rancher-logging/overlay/templates/flow.yaml
@@ -4,7 +4,7 @@ kind: ClusterFlow
 metadata:
   name: {{ .Release.Name }}
   labels:
-{{ include "rancher-logging.labels" . | indent 4 }}
+{{ include "logging-operator.labels" . | indent 4 }}
 spec:
   outputRefs:
     - {{ .Release.Name }}-elasticsearch
