--- a/packages/rancher-logging/overlay/templates/logging.yaml
+++ b/packages/rancher-logging/overlay/templates/logging.yaml
@@ -5,7 +5,7 @@ metadata:
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
   labels:
-{{ include "rancher-logging.labels" . | indent 4 }}
+{{ include "logging-operator.labels" . | indent 4 }}
 spec:
   controlNamespace: {{ .Release.Namespace }}
   fluentbit: {}
