--- a/packages/rancher-istio/charts/templates/istio-uninstall-job.yaml
+++ b/packages/rancher-istio/charts/templates/istio-uninstall-job.yaml
@@ -1,36 +1,23 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: istioctl-installer
+  name: istioctl-uninstaller
   namespace: istio-system
   annotations:
-    "helm.sh/hook": post-install,post-upgrade
+    "helm.sh/hook": pre-delete
     "helm.sh/hook-weight": "-5"
-    # Todo: use following line instead
-    # "helm.sh/hook-delete-policy": before-hook-creation,hook-succeeded
-    "helm.sh/hook-delete-policy": before-hook-creation
+    "helm.sh/hook-delete-policy": hook-succeeded
 spec:
-  backoffLimit: 1
   template:
     spec:
       containers:
-        - name: istioctl-installer
+        - name: istioctl-uninstaller
           image: rancher/istio-installer:{{ .Values.installerVersion }}
           env:
           - name: RELEASE_NAME
             value: {{ .Release.Name }}
-          - name: REVISION_NAME
-            value: {{ .Chart.Version }}
-          {{- if .Values.revision }}
-          - name: CANARY_REVISION
-            value: {{ .Values.revision }}
-          {{- end }}
-          {{- if .Values.overlayFile }}
-          - name: APPLY_OVERLAY_CONFIG
-            value: true
-          {{ end }}
           command: ["/bin/sh","-c"]
-          args: ["/usr/local/app/scripts/run.sh"]
+          args: ["/usr/local/app/scripts/uninstall_istio_system.sh"]
           volumeMounts:
           - name: config-volume
             mountPath: /app/istio-base.yaml
@@ -50,4 +37,4 @@ spec:
             name: istio-installer-overlay
         {{ end }}
       serviceAccountName: istio-installer
-      restartPolicy: Never
+      restartPolicy: OnFailure
