--- a/packages/rancher-monitoring/package.yaml
+++ b/packages/rancher-monitoring/package.yaml
@@ -1,2 +1,3 @@
 url: https://kubernetes-charts.storage.googleapis.com/prometheus-operator-8.16.1.tgz
 packageVersion: 00
+splitCRDsIntoSeparatePackage: true
