--- a/packages/rancher-istio/charts/Chart.yaml
+++ b/packages/rancher-istio/charts/Chart.yaml
@@ -4,6 +4,7 @@ description: Helm chart for installing istio components with the istioctl
 name: rancher-istio-installer
 version: 1.6.500
 annotations:
-  catalog.rancher.io/certified: rancher
-  catalog.rancher.io/namespace: istio-system
-  catalog.rancher.io/release-name: rancher-istio
+  catalog.cattle.io/certified: rancher
+  catalog.cattle.io/namespace: istio-system
+  catalog.cattle.io/release-name: rancher-istio
+  catalog.cattle.io/ui-component: istio
