Update annotations to catalog.cattle.io

--- a/packages/rio/charts/Chart.yaml
+++ b/packages/rio/charts/Chart.yaml
@@ -5,6 +5,6 @@ appVersion: 0.8.0-rc1
 description: The application deployment engine for Kubernetes
 home: https://rio.io
 annotations:
-  catalog.rancher.io/certified: rancher
-  catalog.rancher.io/namespace: rio-system
-  catalog.rancher.io/release-name: rio
+  catalog.cattle.io/certified: rancher
+  catalog.cattle.io/namespace: rio-system
+  catalog.cattle.io/release-name: rio
