--- a/packages/rancher-istio/charts/values.yaml
+++ b/packages/rancher-istio/charts/values.yaml
@@ -1,7 +1,7 @@
 revision: "" # leave blank for no canary deployment, or set to given revision, eg: "1-7-2"
 overlayFile: ""
-tag: 1.7.0-alpha.1
-installerVersion: 0.1.3
+tag: 1.6.6
+installerVersion: 0.1.4
 
 istiocoredns:
     enabled: false
