--- a/packages/rancher-istio/charts/Chart.yaml
+++ b/packages/rancher-istio/charts/Chart.yaml
@@ -3,6 +3,7 @@ appVersion: 1.7.0
 description: Helm chart for installing istio components with the istioctl
 name: rancher-istio-installer
 version: 1.7.000
+icon: https://dev-charts.rancher.io/logos/istio.svg
 annotations:
   catalog.cattle.io/certified: rancher
   catalog.cattle.io/namespace: istio-system
