--- a/packages/rancher-gatekeeper-crd/charts/Chart.yaml
+++ b/packages/rancher-gatekeeper-crd/charts/Chart.yaml
@@ -8,6 +8,7 @@ home: https://github.com/open-policy-agent/gatekeeper
 sources:
   - https://github.com/open-policy-agent/gatekeeper.git
 appVersion: v3.1.0-beta.11
+icon: https://dev-charts.rancher.io/logos/gatekeeper.svg
 annotations:
   catalog.cattle.io/certified: rancher
   catalog.cattle.io/experimental: true
